# r-index

./: CMakeLists.txt  LICENSE  README-final.md  README.md  ri-build.cpp  ri-count.cpp  ri-locate-check.cpp  ri-locate.cpp  ri-space.cpp  tests.cpp
datasets/: patterns.7z
internal/: definitions.hpp  huff_string.hpp  permutation.hpp  r_index.hpp  r_index_f.hpp  r_index_s.hpp  rle_string.hpp  s_rlbwt.hpp  sparse_hyb_vector.hpp  sparse_sd_vector.hpp  succinct_bit_vector.hpp  utils.hpp
